Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/Parens2.out
Parens2.java:13:9: compiler.err.not.stmt
1 error
